--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,14 @@
+* {
+    font-family: Verdana, sans-serif;
+}
+
 #index-body{
     background-image: url(../imagens/thumbs/bg-3.jpg);
     background-position: 75% 20%;
     background-attachment: fixed;
     background-repeat: no-repeat;
-   /* -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;*/
     background-size: cover;
-    font-family: sans-serif;
+    
 }
 .index-main-div{
     transition: 1s;
@@ -51,8 +52,7 @@
 
 /*quemSou*/
 #quemSou-body{
-    font-family: sans-serif;
-    background-color: #444
+    background-color: rgb(37, 37, 37)
 }
 
 .quemSou-header-section {
@@ -63,7 +63,8 @@
 }
 
 .quemSou-header-section h1{
-    text-transform: uppercase;    
+    text-transform: uppercase;   
+    margin: 20px auto;   
 }
 
 .quemSou-header-section p{ 
@@ -75,7 +76,6 @@
 }
 
 .quemSou-header-section p:hover{ 
-    /* background-color: rgb(0, 0, 0); */
     background-color: rgba(0, 0, 0, 0.600);
 }
 
@@ -116,11 +116,12 @@
 
 .quemSou-div-experiencias{
     background-color: #444;
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
     text-align: center;
 }
 .quemSou-div-experiencias h2{
+    text-shadow: 2px 2px 3px rgb(19, 18, 18);
     margin-top: 8px;
     color: white;
     text-transform: uppercase;
@@ -128,17 +129,29 @@
 .quemSou-section-experiencias {
     text-align: center;
     color: white;
-    text-shadow: 2px 2px 3px #333;
+    text-shadow: 2px 2px 3px rgb(0, 0, 0);
     
 }
 .quemSou-div-experiencias-slide{
     padding: 0px 50px;
-    background-color: #333;
+    background-color: rgb(37, 37, 37);
     color: white;
     border-top: 1px solid black;
-    border-bottom: 2px solid black;
+    border-bottom: 1px solid black;
     position: relative;
     box-sizing: border-box;
+}
+
+@media(max-width: 500px) {
+    .quemSou-div-experiencias-slide{
+        padding: 0px 25px;
+        
+    }
+
+    .quemSou-header-section p{ 
+        background-color: rgba(0, 0, 0, 0.700);
+        font-size: 0.8em;
+    }
 }
 .quemSou-div-experiencias-slide div{
     padding: 10px 10%;
@@ -190,18 +203,21 @@
 }
 
 .quemSou-div-formacao-complementar{
-    background-color: #444;
-    border-bottom: 1px solid black;
+    background-color: rgb(63, 63, 63);
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
     text-align: center;
     color:white;
-    margin-top: 8px;
+    padding-top: 8px;
     text-transform: uppercase;
+    text-shadow: 2px 2px 3px rgb(19, 18, 18);
 }
 
 .quemSou-section-formacao-complementar{
     color:white;
     text-align: center;
     background-color: #444;
+    text-shadow: 2px 2px 3px rgb(0, 0, 0);
 }
 
 .quemSou-section-formacao-complementar h4{
@@ -210,7 +226,7 @@
 }
 
 .quemSou-section-formacao-complementar div {
-    background-color: #333;
+    background-color: rgb(37, 37, 37);
     color: white;
     border-top: 1px solid black;
     border-bottom: 2px solid black;
@@ -228,27 +244,37 @@
 }
 
 .quemSou-section-contato{
-    color:white;
     text-align: center;
-    font-size: 20px;
-    background-color: #444;
-    margin-top: 20px;
+    background-color: rgba(82, 82, 82, 0.582);
     padding-top: 10px;
     border-top: 2px solid black;
-    border-bottom: 10px solid #222;
+    border-bottom: 3px solid rgb(26, 26, 26);
 }
+
+.quemSou-section-contato div{
+    color: white;
+    width: 60%;
+    margin: 10px auto 15px auto;
+    box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.945);
+    background-color: rgb(37, 37, 37);
+    border-radius: 10px;
+}
+
 .quemSou-section-contato img {
-    width: 8%;
+    padding-top: 10px;
+    width: 10%;
 }
 
 .quemSou-section-contato h5{
-    margin-top: 20px;
-    font-size: 30px;
+    margin-top: 10px;
+    font-size: 1.6em;
     text-align: center;
 }
+
 .quemsou-ul-contato{
     list-style: none;
-    padding-left: 0px;
+    padding: 0 0 20px 0;
+    margin-bottom: 15px;
 }
 
 .quemsou-ul-contato a{
@@ -264,4 +290,11 @@
 
 .fa-whatsapp{
     color: #25D366;
+}
+
+@media(max-width: 500px) {
+    .quemSou-section-contato div{
+        width: 80%;
+    }
+
 }
