--- a/css/styles.css
+++ b/css/styles.css
@@ -1,286 +1,311 @@
-* {
-    font-family: Verdana, sans-serif;
+*{
+    margin: 0;
+    padding: 0;
 }
 
-#index-body{
-    background-image: url(../imagens/thumbs/bg-3.jpg);
-    background-position: 75% 20%;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
-    
-}
-.index-main-div{
-    transition: 1s;
-    font-weight: 1.5;
-    border-radius: 15px;
-}
-.index-main-div:hover{
-    background-color: #222;
-}
-.index-main-h1{
-    text-align: center;
+#body {
+    display: grid;
+    grid-template-areas: 'header';
+    background-color: rgb(54, 54, 54);
     color: white;
-}
-.index-nav-ul-li{
-    display: inline-block;
-    list-style: none;
-    text-align: center;
-}
-.index-nav-ul-li a{
-    background-color: #444;
-    display: block;
-    padding: 10px;
-    color: white;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 12px;
-    letter-spacing: 2px;
-    transition: 0.4s linear;
-    border: 1px solid white; 
+    font-family: Verdana, Tahoma, sans-serif;
 }
 
-.index-nav-ul-li a:hover{
-    background-color: #222;
-}
-
-.nav-link{
-    border: 0px;
-}
-/*index*/
-
-
-/*quemSou*/
-#quemSou-body{
-    background-color: rgb(37, 37, 37)
-}
-
-.quemSou-header-section {
-    color: white;
-    text-align: center;
-    font-size: 22px;
-    text-shadow: 2px 2px 3px #111;
-}
-
-.quemSou-header-section h1{
-    text-transform: uppercase;   
-    margin: 20px auto;   
-}
-
-.quemSou-header-section p{ 
-    font-size: 16px;
-    transition: 1s;
-    font-weight: 1.5;
-    border-radius: 15px;
-    margin: 0px;
-}
-
-.quemSou-header-section p:hover{ 
-    background-color: rgba(0, 0, 0, 0.600);
-}
-
-.quemSou-header-banner{
+.header {
+    display: flex;
+    flex-direction: column;
+    grid-area: header;
+    align-items: center;
     background-image: url(../imagens/thumbs/bg-5.jpg);
     background-position: 75% 50%;
     background-repeat: no-repeat;
     background-size: cover;
-    padding-bottom: 200px;
-    background-color: #555;
+    padding-bottom: 50px;
 }
 
-.quemSou-header-banner:hover{
-    background-color: rgba(0, 0, 0, 0.600);
-}
-
-.quemSou-ul-li{
-    list-style: none;
-}
-
-.quemSou-ul-li a{
-    background-color: #444;
-    display: block;
-    padding: 10px;
-    color: white;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 12px;
-    letter-spacing: 2px;
-    transition: 0.4s linear;
-    border: 1px solid white; 
+.header-div {
+    display: flex;
+    justify-content: center;
+    flex-flow: column;
+    margin-left: auto;
+    margin-right: auto;
     text-align: center;
 }
 
-.quemSou-ul-li a:hover{
-    background-color: #222;
+.header-div img {
+    margin:0 auto;
+    width: 50%;
+    margin-top: 80px;
 }
 
-.quemSou-div-experiencias{
-    background-color: #444;
-    border-top: 2px solid black;
-    border-bottom: 2px solid black;
-    text-align: center;
-}
-.quemSou-div-experiencias h2{
-    text-shadow: 2px 2px 3px rgb(19, 18, 18);
-    margin-top: 8px;
-    color: white;
-    text-transform: uppercase;
-}
-.quemSou-section-experiencias {
-    text-align: center;
-    color: white;
-    text-shadow: 2px 2px 3px rgb(0, 0, 0);
-    
-}
-.quemSou-div-experiencias-slide{
-    padding: 0px 50px;
-    background-color: rgb(37, 37, 37);
-    color: white;
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
-    position: relative;
-    box-sizing: border-box;
+.header-div h1{
+    text-shadow: 2px 2px 3px #111;
 }
 
-@media(max-width: 500px) {
-    .quemSou-div-experiencias-slide{
-        padding: 0px 25px;
-        
+.header-nav-menu{
+    display: flex;  
+    flex-direction: row;
+    justify-content: center;
+    position: fixed;
+    margin: 0 auto;
+    padding: 20px;
+    padding-top: 5px;
+    background-color: rgb(56, 56, 56);
+    width: 100%;
+}
+
+@media(max-width: 945px) and (min-width: 865px){
+    .header-div img {
+        margin-top: 80px;
     }
+}
 
-    .quemSou-header-section p{ 
-        background-color: rgba(0, 0, 0, 0.700);
+@media(max-width: 864px) and (min-width: 801px){
+    [header-ul] li a{
+        font-size: 0.9em;
+    }
+}
+
+@media(max-width: 800px) and (min-width: 735px) {
+    [header-ul] li a{
         font-size: 0.8em;
     }
+
 }
-.quemSou-div-experiencias-slide div{
-    padding: 10px 10%;
-    margin-top: 10px;
-    opacity: 0;
-    position: absolute;
-    box-sizing: border-box;
-    top: 0;
-    left: 50px;
-    right: 50px;
+/* and (min-width: 707px) */
+@media(max-width: 734px)  {
+    /* [header-ul] li a{
+        font-size: 0.7em;
+    } */
+
+    .header-nav-menu [header-ul] li{
+        font-size: 0.8em;
+    }
+
 }
 
-.quemSou-div-experiencias-slide h4{
-    margin-top: 0px;
-}
+@media(max-width: 706px) {
 
-.quemSou-div-experiencias-slide div.show{
-    opacity: 1;
-    position: static;
-    transition: opacity 2s;
-}
-.quemSou-div-experiencias-slide .prev{
-    z-index: 3;
-    position: absolute;
-    top: 40%;
-    cursor: pointer;
-}
-.quemSou-div-experiencias-slide .next {
-    z-index: 3;
-    position: absolute;
-    top: 40%;
-    cursor: pointer;
-}
-.quemSou-div-experiencias-slide .prev {
-    transition: 1s;
-    left: 5px;
-    opacity: 0.4;
-}
-.quemSou-div-experiencias-slide .next {
-    transition: 1s;
-    right: 5px;
-    opacity: 0.4;
-}
-.quemSou-div-experiencias-slide .prev:hover{
-    opacity: 1;
-}
-.quemSou-div-experiencias-slide .next:hover{
-    opacity: 1;
-}
+    .header-nav-menu [header-ul] {
+        flex-wrap: wrap;
+    }
 
-.quemSou-div-formacao-complementar{
-    background-color: rgb(63, 63, 63);
-    border-top: 2px solid black;
-    border-bottom: 2px solid black;
-    text-align: center;
-    color:white;
-    padding-top: 8px;
-    text-transform: uppercase;
-    text-shadow: 2px 2px 3px rgb(19, 18, 18);
-}
+    .header-nav-menu [header-ul] li{
+        padding-top: 5px;
+    }
 
-.quemSou-section-formacao-complementar{
-    color:white;
-    text-align: center;
-    background-color: #444;
-    text-shadow: 2px 2px 3px rgb(0, 0, 0);
-}
-
-.quemSou-section-formacao-complementar h4{
-    padding-top: 10px;
     
 }
 
-.quemSou-section-formacao-complementar div {
-    background-color: rgb(37, 37, 37);
-    color: white;
-    border-top: 1px solid black;
-    border-bottom: 2px solid black;
+ /* and (min-width:) */ 
+/* @media(max-width: 705px){
+    [header-ul] li{
+        font-size: 0.6em;
+    }
+} */
+
+[header-ul] {
+    display: flex;
+    flex-direction: row;
 }
 
-.quemSou-ul-formacao-complementar{
+[header-ul] li{
+    font-size: 1.0em;
+    padding: 0 5px;
     list-style: none;
-    margin-top: 8px;
-    padding-left: 0px;
+    justify-content: center;
+    align-items: center;
 }
 
-.quemSou-ul-formacao-complementar li a{
-    color: white;
+[header-ul] a{
     text-decoration: none;
-}
-
-.quemSou-section-contato{
-    text-align: center;
-    background-color: rgba(82, 82, 82, 0.582);
-    padding-top: 10px;
-    border-top: 2px solid black;
-    border-bottom: 3px solid rgb(26, 26, 26);
-}
-
-.quemSou-section-contato div{
     color: white;
-    width: 60%;
-    margin: 10px auto 15px auto;
-    box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.945);
+}
+
+.header-section{
+    text-align: center;
+    padding: 20px 40px;
+    width: 80%;
+    margin-top: 50px;
+}
+
+.header-section h1{
+    margin: 0px auto 15px auto;
+    text-align: center;
+    font-size: 1.8em;
+    text-transform: uppercase;    
+    text-shadow: 2px 2px 3px #111;
+}
+
+.header-section p{
+    transition: 0.5s;
+    border-radius: 25px;
+    padding: 15px;
+    font-weight: 450;
+    font-size: 1.1em;
+    background-color: rgba(37, 37, 37, 0.9);
+}
+
+@media(max-width: 600px) {
+    .header{
+        padding-bottom: 100px;
+    }
+
+    .header-section{
+        width: 80%;
+        padding: 0;
+        margin: 0 auto;
+    }
+
+    .header-section h1{
+        margin-top: 15px;
+    }
+    
+    .header-section p{
+        padding: 10px;
+        background-color: rgba(37, 37, 37, 0.9);
+    }
+    
+}
+
+@media(max-width: 350px) {
+    .header-section{
+        box-sizing: content-box;
+        width: 80%;
+        padding: 20px 0;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+.experiencias-section{
+    display: flex;
+    flex-flow: column;
+}
+
+.experiencias-section h2{
+    font-size: 28px;
+    width: 50%;
+    margin: 0 auto;
+    text-align: center;
     background-color: rgb(37, 37, 37);
-    border-radius: 10px;
+    padding: 20px 15px;
+    border-radius: 100px 100px 0 0;
+    border: 1px solid rgb(22, 22, 22);;
 }
 
-.quemSou-section-contato img {
-    padding-top: 10px;
-    width: 10%;
+.experiencias-div-container {
+    display: flex;
+    flex-flow: row;
 }
 
-.quemSou-section-contato h5{
+.button {
+    margin: auto 0;
+    font-size: 30px;
+    color: white;
+    background-color: rgb(37, 37, 37);
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+.experiencias-btn-left{
+    padding: 25px 10px 25px 10px;
+    border-radius: 100px 0px 0px 100px;
+}
+
+.experiencias-btn-left:hover{
+    background-color: white;
+    color: black;
+}
+
+.experiencias-btn-right{
+    padding: 25px 10px 25px 10px;
+    border-radius: 0px 100px 100px 0px;
+}
+
+.experiencias-btn-right:hover{
+    background-color: white;
+    color: black;
+}
+
+[experiencias-div-slide] {
+    border-radius: 20px;
+    padding: 20px 0;
+    text-align: center;
+    background-color: rgb(37, 37, 37);
+    display: grid;
+}
+
+[experiencias-div-slide] div{
+    grid-area: slide-content;
+}
+
+[experiencias-div-slide] h3 {
+}
+
+[experiencias-div-slide] h4, p{
+    padding: 5px 0;
+}
+
+.experiencia-p-desc {
+    width: 90%;
+    margin: 0 auto;
+}
+
+.show {
+    display: block;
+    opacity: 1;
+    transition: opacity 2s;
+}
+
+.show-none {
+    opacity: 0;
+}
+
+.formacao-complementar-section {
+    display: flex;
+    flex-flow: column;
+    text-align: center;
+    
+}
+
+.formacao-complementar-section div {
+    border-radius: 20px;
+    padding: 20px 0;
+    background-color: rgb(37, 37, 37);
+    width: 80%;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    box-shadow: 0px 5px 16px 5px rgba(0,0,0,0.75);
+}
+
+.formacao-complementar-section h3 {
+    font-size: 22px;
+    width: 50%;
+    margin: 10px auto;
     margin-top: 10px;
-    font-size: 1.6em;
     text-align: center;
+    background-color: rgb(37, 37, 37);
+    padding: 20px 15px;
+    border-radius: 100px;
+    border: 1px solid rgb(22, 22, 22);;
 }
 
-.quemsou-ul-contato{
+.ul-formacao-complementar li{
     list-style: none;
-    padding: 0 0 20px 0;
-    margin-bottom: 15px;
+    padding: 5px 0;
 }
 
-.quemsou-ul-contato a{
-    color:white;
+.ul-formacao-complementar a{
     text-decoration: none;
+    color: white;
 }
+
+.formacao-complementar-section h4, h5 {
+    font-size: 16px;
+    padding: 5px 0;
+}
+
 .fa-linkedin{
     color: #2867B2;
 }
@@ -292,9 +317,10 @@
     color: #25D366;
 }
 
-@media(max-width: 500px) {
-    .quemSou-section-contato div{
-        width: 80%;
-    }
 
-}
+
+
+
+
+
+
