hideMenu.js updated

--- a/css/styles.css
+++ b/css/styles.css
@@ -258,6 +258,7 @@
     .header-hide-menu {
         width: 80%;
     }
+}
 
 .experiencias-section{
     display: flex;
@@ -397,11 +398,3 @@
 .fa-whatsapp{
     color: #25D366;
 }
-
-
-
-
-
-
-
-
