--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11,7 +11,7 @@
     font-family: Verdana, Tahoma, sans-serif;
 }
 
-.header {
+/* .header {
     display: flex;
     flex-direction: column;
     grid-area: header;
@@ -20,8 +20,8 @@
     background-position: 75% 50%;
     background-repeat: no-repeat;
     background-size: cover;
-    padding-bottom: 50px;
-}
+    height: 100vh;
+} */
 
 .header-div {
     display: flex;
@@ -51,7 +51,8 @@
     margin: 0 auto;
     padding: 20px;
     padding-top: 5px;
-    background-color: rgb(56, 56, 56);
+    /* background-color: rgb(56, 56, 56); */
+    background: rgb(37, 37, 37);
     width: 100%;
 }
 
@@ -186,17 +187,15 @@
 }
 
 .header-section{
-    text-align: center;
+    /* text-align: center;
     padding: 20px 40px;
     width: 80%;
-    margin-top: 50px;
+    margin-top: 50px; */
 }
 
 .header-section h1{
     margin: 0px auto 15px auto;
-    text-align: center;
     font-size: 1.8em;
-    text-transform: uppercase;    
     text-shadow: 2px 2px 3px #111;
 }
 
@@ -211,6 +210,7 @@
 
 .header-avatar-img {
     border-radius: 50%;
+    width: 40%;
 }
 
 @media(max-width: 600px) {
